--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,5 +10,5 @@
   "python.testing.nosetestsEnabled": false,
   "python.testing.unittestEnabled": false,
   "python.testing.promptToConfigure": false,
-  "python.pythonPath": "C:\\Users\\klindqvist\\AppData\\Local\\Continuum\\anaconda3\\python.exe"
+  "python.pythonPath": "/usr/local/bin/python3"
 }
